--- a/node9.html
+++ b/node9.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html836"
+<A NAME="tex2html838"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html830"
+<A NAME="tex2html832"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html824"
+<A NAME="tex2html826"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html832"
+<A NAME="tex2html834"
   HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html834"
+<A NAME="tex2html836"
   HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html837"
+<B> Sig:</B> <A NAME="tex2html839"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html831"
+<B>Sup:</B> <A NAME="tex2html833"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html825"
+<B> Ant:</B> <A NAME="tex2html827"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <B> Con:</B> 
-<A NAME="tex2html832"
+<A NAME="tex2html834"
   HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html834"
+<A NAME="tex2html836"
   HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,30 +103,30 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html838"
-  HREF="node9.html#SECTION04120010000000000000">index.html</A>
-<LI><A NAME="tex2html839"
-  HREF="node9.html#SECTION04120020000000000000">global.css</A>
 <LI><A NAME="tex2html840"
-  HREF="node9.html#SECTION04120030000000000000">temperature.js</A>
+  HREF="node9.html#SECTION04120010000000000000">index.html</A>
 <LI><A NAME="tex2html841"
-  HREF="node9.html#SECTION04120040000000000000">Despliegue</A>
+  HREF="node9.html#SECTION04120020000000000000">global.css</A>
 <LI><A NAME="tex2html842"
-  HREF="node9.html#SECTION04120050000000000000">Mocha y Chai</A>
+  HREF="node9.html#SECTION04120030000000000000">temperature.js</A>
 <LI><A NAME="tex2html843"
-  HREF="node9.html#SECTION04120060000000000000">Pruebas: Estructura</A>
+  HREF="node9.html#SECTION04120040000000000000">Despliegue</A>
 <LI><A NAME="tex2html844"
-  HREF="node9.html#SECTION04120070000000000000">Pruebas: <TT>index.html</TT></A>
+  HREF="node9.html#SECTION04120050000000000000">Mocha y Chai</A>
 <LI><A NAME="tex2html845"
-  HREF="node9.html#SECTION04120080000000000000">Pruebas: Añadir los tests</A>
+  HREF="node9.html#SECTION04120060000000000000">Pruebas: Estructura</A>
 <LI><A NAME="tex2html846"
+  HREF="node9.html#SECTION04120070000000000000">Pruebas: <TT>index.html</TT></A>
+<LI><A NAME="tex2html847"
+  HREF="node9.html#SECTION04120080000000000000">Pruebas: Añadir los tests</A>
+<LI><A NAME="tex2html848"
   HREF="node9.html#SECTION04120090000000000000">Pruebas: Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2470"></A>
+   <A NAME="2474"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -177,6 +177,15 @@ index.html</A>
   <span class="nt">&lt;/body&gt;</span>
 <span class="nt">&lt;/html&gt;</span>
     </pre>
+
+<P>
+Escribir HTML es farragoso. Una solución es usar algún plugin para su editor favorito.
+  En el caso de vim podemos usar 
+<A NAME="tex2html17"
+  HREF="https://raw.githubusercontent.com/mattn/emmet-vim/master/TUTORIAL">Emmet-vim</A>
+decargandolo desde 
+<A NAME="tex2html18"
+  HREF="http://www.vim.org/scripts/script.php?script_id=2981">http://www.vim.org/</A>.
 
 <P>
 
@@ -267,7 +276,7 @@ that runs in Node.js or in the browser.
 <P>
 It is open source (MIT licensed),
 and we can learn more about it at
-<A NAME="tex2html17"
+<A NAME="tex2html19"
   HREF="https://github.com/mochajs/mocha">https://github.com/mochajs/mocha</A>
 <P>
 Let's say
@@ -308,14 +317,14 @@ tests
 <P>
 Añadimos <code>chai.js</code>
 (Véase 
-<A NAME="tex2html18"
+<A NAME="tex2html20"
   HREF="http://chaijs.com/guide/installation/">http://chaijs.com/guide/installation/</A>) al directorio <code>tests</code>.
 
 <P>
 Chai is a platform-agnostic BDD/TDD assertion library featuring several interfaces 
 (for example, should, expect, and assert). 
 It is open source (MIT licensed), and we can learn more about it at
-<A NAME="tex2html19"
+<A NAME="tex2html21"
   HREF="http://chaijs. com/">http://chaijs. com/</A>
 <P>
 We can also install Chai on the command line using npm, as follows:
@@ -325,12 +334,12 @@ We can also install Chai on the command line using npm, as follows:
 
 <P>
 The latest tagged version will be available for hot-linking at 
-<A NAME="tex2html20"
+<A NAME="tex2html22"
   HREF="http://chaijs.com/chai.js">http://chaijs.com/chai.js</A>.
 
 <P>
 If you prefer to host yourself, use the <code>chai.js</code> file from the root of the 
-<A NAME="tex2html21"
+<A NAME="tex2html23"
   HREF="https://github.com/chaijs/chai">github project</A>. 
 
 <P>
@@ -347,7 +356,7 @@ tests/
 </PRE>
 Podemos encontrar un ejemplo de  unit testing en JavaScript en el browser con 
 el testing framework Mocha y  Chai en el repositorio 
-<A NAME="tex2html22"
+<A NAME="tex2html24"
   HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">https://github.com/ludovicofischer/mocha-chai-browser-demo</A>.
 
 <P>
@@ -458,14 +467,14 @@ Pruebas: Véase</A>
   
 
 <UL>
-<LI><A NAME="tex2html23"
+<LI><A NAME="tex2html25"
   HREF="https://nicolas.perriault.net/code/2013/testing-frontend-javascript-code-using-mocha-chai-and-sinon/">Testing your frontend JavaScript code using mocha, chai, and sinon</A>
 by Nicolas Perriault
 </LI>
-<LI><A NAME="tex2html24"
+<LI><A NAME="tex2html26"
   HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">An example setup for unit testing JavaScript in the browser with the Mocha testing framework and Chai assertions</A>
 </LI>
-<LI><A NAME="tex2html25"
+<LI><A NAME="tex2html27"
   HREF="http://www.kenpowers.net/blog/testing-in-browsers-and-node/">Testing in Browsers and Node with Mocha, Chai, Sinon, and Testem
 </A>
 </LI>
@@ -474,19 +483,19 @@ by Nicolas Perriault
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html836"
+<A NAME="tex2html838"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html830"
+<A NAME="tex2html832"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html824"
+<A NAME="tex2html826"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html832"
+<A NAME="tex2html834"
   HREF="node76.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html834"
+<A NAME="tex2html836"
   HREF="node79.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -526,17 +535,17 @@ by Nicolas Perriault
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html837"
+<B> Sig:</B> <A NAME="tex2html839"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html831"
+<B>Sup:</B> <A NAME="tex2html833"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html825"
+<B> Ant:</B> <A NAME="tex2html827"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
 <I>Casiano Rodríguez León <BR>
-2015-01-25</I>
+2015-01-26</I>
 </ADDRESS>
 </BODY>
 </HTML>
