--- a/node9.html
+++ b/node9.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html928"
+<A NAME="tex2html930"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html922"
+<A NAME="tex2html924"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html916"
+<A NAME="tex2html918"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html924"
+<A NAME="tex2html926"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html926"
+<A NAME="tex2html928"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html929"
+<B> Sig:</B> <A NAME="tex2html931"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html923"
+<B>Sup:</B> <A NAME="tex2html925"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html917"
+<B> Ant:</B> <A NAME="tex2html919"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <B> Con:</B> 
-<A NAME="tex2html924"
+<A NAME="tex2html926"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html926"
+<A NAME="tex2html928"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,50 +103,52 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html930"
-  HREF="node9.html#SECTION04120010000000000000">index.html</A>
-<LI><A NAME="tex2html931"
-  HREF="node9.html#SECTION04120020000000000000">global.css</A>
 <LI><A NAME="tex2html932"
-  HREF="node9.html#SECTION04120030000000000000">Sintáxis CSS</A>
+  HREF="node9.html#SECTION04120010000000000000">index.html</A>
 <LI><A NAME="tex2html933"
-  HREF="node9.html#SECTION04120040000000000000">Selectores en CSS</A>
+  HREF="node9.html#SECTION04120020000000000000">global.css</A>
 <LI><A NAME="tex2html934"
-  HREF="node9.html#SECTION04120050000000000000">CSS reset</A>
+  HREF="node9.html#SECTION04120030000000000000">Sintáxis CSS</A>
 <LI><A NAME="tex2html935"
-  HREF="node9.html#SECTION04120060000000000000">El Modelo de Caja</A>
+  HREF="node9.html#SECTION04120040000000000000">Selectores en CSS</A>
 <LI><A NAME="tex2html936"
-  HREF="node9.html#SECTION04120070000000000000">Editing CSS styles in Chrome using various DevTools aid</A>
+  HREF="node9.html#SECTION04120050000000000000">CSS reset</A>
 <LI><A NAME="tex2html937"
-  HREF="node9.html#SECTION04120080000000000000">Block versus Inline</A>
+  HREF="node9.html#SECTION04120060000000000000">El Modelo de Caja</A>
 <LI><A NAME="tex2html938"
-  HREF="node9.html#SECTION04120090000000000000">Propiedades CSS</A>
+  HREF="node9.html#SECTION04120070000000000000">Editing CSS styles in Chrome using various DevTools aid</A>
 <LI><A NAME="tex2html939"
-  HREF="node9.html#SECTION041200100000000000000">temperature.js</A>
+  HREF="node9.html#SECTION04120080000000000000">Block versus Inline</A>
 <LI><A NAME="tex2html940"
-  HREF="node9.html#SECTION041200110000000000000">Despliegue</A>
+  HREF="node9.html#SECTION04120090000000000000">Propiedades CSS</A>
 <LI><A NAME="tex2html941"
-  HREF="node9.html#SECTION041200120000000000000">Creando un fichero package.json</A>
+  HREF="node9.html#SECTION041200100000000000000">temperature.js</A>
 <LI><A NAME="tex2html942"
-  HREF="node9.html#SECTION041200130000000000000">Pruebas: Mocha y Chai</A>
+  HREF="node9.html#SECTION041200110000000000000">Despliegue</A>
 <LI><A NAME="tex2html943"
-  HREF="node9.html#SECTION041200140000000000000">Pruebas: Estructura</A>
+  HREF="node9.html#SECTION041200120000000000000">Creando un fichero package.json</A>
 <LI><A NAME="tex2html944"
-  HREF="node9.html#SECTION041200150000000000000">Pruebas: <TT>index.html</TT></A>
+  HREF="node9.html#SECTION041200130000000000000">Pruebas: Mocha y Chai</A>
 <LI><A NAME="tex2html945"
-  HREF="node9.html#SECTION041200160000000000000">Pruebas: Añadir los tests</A>
+  HREF="node9.html#SECTION041200140000000000000">Pruebas: Estructura</A>
 <LI><A NAME="tex2html946"
-  HREF="node9.html#SECTION041200170000000000000">Chai Assert Style</A>
+  HREF="node9.html#SECTION041200150000000000000">Pruebas: <TT>index.html</TT></A>
 <LI><A NAME="tex2html947"
-  HREF="node9.html#SECTION041200180000000000000">Ejecución Simple</A>
+  HREF="node9.html#SECTION041200160000000000000">Pruebas: Añadir los tests</A>
 <LI><A NAME="tex2html948"
-  HREF="node9.html#SECTION041200190000000000000">Pruebas: Véase</A>
+  HREF="node9.html#SECTION041200170000000000000">Chai Assert Style</A>
+<LI><A NAME="tex2html949"
+  HREF="node9.html#SECTION041200180000000000000">Assert API</A>
+<LI><A NAME="tex2html950"
+  HREF="node9.html#SECTION041200190000000000000">Ejecución Simple</A>
+<LI><A NAME="tex2html951"
+  HREF="node9.html#SECTION041200200000000000000">Pruebas: Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2669"></A>
+   <A NAME="2672"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -341,7 +343,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2674"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2676"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2677"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2679"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -392,25 +394,25 @@ Sintáxis CSS</A>
 <PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2686"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2689"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each declaration inside the curly braces has a semicolon. Everything
-inside the curly braces is called a <A NAME="2688"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2691"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2690"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2693"></A><SPAN  CLASS="textit">selector</SPAN>.
 
 <P>
 Here we're using commas to separate our selectors <code>th</code> and <code>td</code>. 
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2692"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2695"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2694"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2696"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2697"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2699"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semicolon.
 </LI>
@@ -534,7 +536,7 @@ a:hover {
    color: red;
 }
 </PRE>
-¿Que porción del selector es conocido como <A NAME="2702"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
+¿Que porción del selector es conocido como <A NAME="2705"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
 ¿Cuando se aplica la regla a un ancla <code>&lt;a&gt;</code>?
 </LI>
 <LI>Exprese con palabras a que elementos del documento se aplicará la siguiente regla:
@@ -592,7 +594,7 @@ For example, if you use an un-ordered list (the <code>&lt;ul&gt;</code> element)
 formatting styles, including bullets next to the individual list items (the <code>&lt;li&gt;</code> elements inside the <code>&lt;ul&gt;</code>). 
 
 <P>
-By using a <A NAME="2708"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
+By using a <A NAME="2711"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
 to a bare minimum. 
 
 <P>
@@ -617,7 +619,7 @@ El Modelo de Caja</A>
   
 
 <P>
-The <A NAME="2714"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
+The <A NAME="2717"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
 
 <P>
 
@@ -626,7 +628,7 @@ The <A NAME="2714"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usua
 <P>
 
 <UL>
-<LI><A NAME="2716"></A><SPAN  CLASS="textbf">Content</SPAN> 
+<LI><A NAME="2719"></A><SPAN  CLASS="textbf">Content</SPAN> 
 
 <P>
 The content portion of the box model holds the actual content. 
@@ -637,7 +639,7 @@ whatever else is visible on a web page.
 
 <P>
 </LI>
-<LI><A NAME="2718"></A><SPAN  CLASS="textbf">Padding</SPAN>
+<LI><A NAME="2721"></A><SPAN  CLASS="textbf">Padding</SPAN>
 
 <P>
 The <code>padding</code> of an element is defined using the <code>padding</code> property. The <code>padding</code> is the space around the content. 
@@ -649,7 +651,7 @@ for all four sides in one declaration
 <code>padding: 20px 10px 30px 20px</code>, for instance. 
 
 <P>
-When declaring all four sides, you’re using a <A NAME="2720"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
+When declaring all four sides, you’re using a <A NAME="2723"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
 
 <P>
 Often when a CSS property takes multiple values like this, 
@@ -661,7 +663,7 @@ top, <code>10px</code> to the right, <code>30px</code> to the bottom, and <code>
 See <A NAME="tex2html30"
   HREF="http://www.w3schools.com/css/css_padding.asp">padding examples at w3schools</A>.
 </LI>
-<LI><A NAME="2724"></A><SPAN  CLASS="textbf">Border</SPAN> 
+<LI><A NAME="2727"></A><SPAN  CLASS="textbf">Border</SPAN> 
 
 <P>
 The border of an element is defined using the border property. 
@@ -675,7 +677,7 @@ border: 4px dashed orange.
 
 <P>
 </LI>
-<LI><A NAME="2728"></A><SPAN  CLASS="textbf">Margin</SPAN> 
+<LI><A NAME="2731"></A><SPAN  CLASS="textbf">Margin</SPAN> 
 
 <P>
 Margins are similar to padding, and are defined using similar syntax 
@@ -778,7 +780,7 @@ Block versus Inline</A>
   
 
 <P>
-HTML elements fall under two categories: <A NAME="2740"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2742"></A><SPAN  CLASS="textbf">inline</SPAN>.
+HTML elements fall under two categories: <A NAME="2743"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2745"></A><SPAN  CLASS="textbf">inline</SPAN>.
 
 <P>
 
@@ -1272,6 +1274,18 @@ These will be included in the error messages should your assertion not pass.
 <P>
 
 <H4><A NAME="SECTION041200180000000000000">
+Assert API</A>
+</H4>
+  
+
+<P>
+Here  is the documentation of the 
+<A NAME="tex2html44"
+  HREF="http://chaijs.com/api/assert/">Assert API</A>.
+
+<P>
+
+<H4><A NAME="SECTION041200190000000000000">
 Ejecución Simple</A>
 </H4>
   
@@ -1284,24 +1298,24 @@ $ open tests/index.html
 
 <P>
 
-<H4><A NAME="SECTION041200190000000000000">
+<H4><A NAME="SECTION041200200000000000000">
 Pruebas: Véase</A>
 </H4>
   
 
 <UL>
-<LI><A NAME="tex2html44"
+<LI><A NAME="tex2html45"
   HREF="https://nicolas.perriault.net/code/2013/testing-frontend-javascript-code-using-mocha-chai-and-sinon/">Testing your frontend JavaScript code using mocha, chai, and sinon</A>
 by Nicolas Perriault
 </LI>
 <LI>Podemos encontrar un ejemplo de  unit testing en JavaScript en el browser con 
 el testing framework Mocha y  Chai en el repositorio 
-<A NAME="tex2html45"
-  HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">https://github.com/ludovicofischer/mocha-chai-browser-demo</A>:
 <A NAME="tex2html46"
+  HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">https://github.com/ludovicofischer/mocha-chai-browser-demo</A>:
+<A NAME="tex2html47"
   HREF="https://github.com/ludovicofischer/mocha-chai-browser-demo">An example setup for unit testing JavaScript in the browser with the Mocha testing framework and Chai assertions</A>
 </LI>
-<LI><A NAME="tex2html47"
+<LI><A NAME="tex2html48"
   HREF="http://www.kenpowers.net/blog/testing-in-browsers-and-node/">Testing in Browsers and Node with Mocha, Chai, Sinon, and Testem
 </A>
 </LI>
@@ -1310,19 +1324,19 @@ el testing framework Mocha y  Chai en el repositorio
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html928"
+<A NAME="tex2html930"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html922"
+<A NAME="tex2html924"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html916"
+<A NAME="tex2html918"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html924"
+<A NAME="tex2html926"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html926"
+<A NAME="tex2html928"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -1362,11 +1376,11 @@ el testing framework Mocha y  Chai en el repositorio
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html929"
+<B> Sig:</B> <A NAME="tex2html931"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html923"
+<B>Sup:</B> <A NAME="tex2html925"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html917"
+<B> Ant:</B> <A NAME="tex2html919"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 </DIV>
 <!--End of Navigation Panel-->
